<resources>
    <string name="app_name">WeatherApp</string>
    <string name="menu_item_current_location">Vị trí hiện tại</string>
    <string name="menu_item_city_manage">Quản lý thành phố</string>
    <string name="menu_item_language">Ngôn ngữ</string>
    <string name="menu_item_auto_update">Tự động cập nhật</string>
    <string name="menu_item_location">Vị trí</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_item_notification">Thông báo</string>
    <string name="edit_location">Chỉnh sửa vị trí</string>
    <string name="add_location">Thêm vị trí</string>
    <string name="auto_detect_location">Tự động xác định vị trí</string>
    <string name="set_as_home">Đặt làm nhà</string>
    <string name="delete">Xóa</string>
    <string name="notification">Thông báo</string>
    <string name="weather_information">Thông tin thời tiết</string>
    <string name="prepare_for_your_day">Chuẩn bị cho ngày của bạn</string>
    <string name="select_a_daily_notification_time">Chọn thời gian thông báo hằng ngày</string>
    <string name="help_you_prepare_more_actively">Giúp bạn chuẩn bị tích cực hơn</string>
    <string name="time_to_notify_again">Thời gian để thông báo lại</string>
    <string name="vibrate_when_prompted">Rung khi được nhắc</string>
    <string name="sound_notification">Âm thông báo</string>
    <string name="unit_setting">Cài đặt đơn vị</string>
    <string name="temperature">Nhiệt độ</string>
    <string name="time_format">Định dạng thời gian</string>
    <string name="distance">Khoảng cách</string>
    <string name="speed">Tốc độ</string>
    <string name="pressure">Áp suất</string>
    <string name="precipitation">Lượng mưa</string>
    <string name="_do">°</string>
    <string name="_doC">°C</string>
    <string name="_doF">°F</string>
    <string name="umbrella">Ô</string>
    <string name="coat">Áo mưa</string>
    <string name="feature_setting">Cài đặt tính năng</string>
    <string name="summary_coat_temp">Thông báo giúp bạn chuẩn bị áo khoác khi thời tiết lạnh dưới mức</string>
    <string name="summary_high_temperature">Đưa ra cảnh báo cho bạn khi nhiệt độ cao hơn mức</string>
    <string name="summary_low_temperature">Đưa ra cảnh báo cho bạn khi nhiệt độ thấp hơn mức</string>
    <string name="summary_prepare">Bạn cần chúng tôi thông báo cho bạn những khi cần mang ô, mang áo khoác hay cảnh báo nhiệt độ khắc nghiệt</string>
    <string name="summary_umbrella">Thông báo giúp bạn chuẩn bị ô(dù) nếu trời có khả năng mưa</string>
    <string name="high_temperature">Nhiệt độ cao</string>
    <string name="high_temperature_warning">Cảnh báo nhiệt độ cao</string>
    <string name="low_temperature">Nhiệt độ thấp</string>
    <string name="low_temperature_warning">Cảnh báo nhiệt độ thấp</string>
    <string name="select">Lựa chọn</string>
    <string name="cancel">Hủy</string>
    <string name="humidity">Độ ẩm</string>
    <string name="cloud_cover">Mây che phủ</string>
    <string name="wind">Gió</string>
    <string name="snow">Tuyết</string>
    <string name="sunset">Hoàng hôn</string>
    <string name="sunrise">Bình minh</string>
    <string name="detail">Chi tiết</string>
    <string name="today">Hôm nay</string>
    <string name="air">Không Khí</string>
    <string-array name="arrTinhThanh">
        <item>An Giang</item>
        <item>Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
    </string-array>

    <array name="menuOptions">
        <item>Vị trí</item>
        <item>Thông báo</item>
        <item>Nhiệt độ</item>
        <item>Chuẩn bị ngày của bạn</item>
        <item>Cài đặt đơn vị</item>
        <item>Hình ảnh nền</item>
        <item>Widget thời tiết</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="error_api_key">\" \"</string>
</resources>