<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper5"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:id="@+id/activity_unit_setting">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        custom:title="@string/unit_setting"
        custom:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="12dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginBottom="4dip"
                android:text="@string/temperature"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/switch_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                custom:textToggleLeft="@string/_doC"
                custom:textToggleRight="@string/_doF"
                app:checkedBackgroundColor="@color/orange"
                app:checkedTextColor="@android:color/white"
                app:uncheckedBackgroundColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginBottom="4dip"
                android:text="@string/time_format"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/switch_time_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                custom:textToggleLeft="12:00"
                custom:textToggleRight="24:00"
                app:checkedBackgroundColor="@color/orange"
                app:checkedTextColor="@android:color/white"
                app:uncheckedBackgroundColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginBottom="4dip"
                android:text="@string/distance"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/switch_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                custom:textToggleLeft="km"
                custom:textToggleRight="mi"
                app:checkedBackgroundColor="@color/orange"
                app:checkedTextColor="@android:color/white"
                app:uncheckedBackgroundColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="12dip"
                android:layout_marginRight="12dip"
                android:layout_marginBottom="4dip"
                android:text="@string/precipitation"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/switch_precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                custom:textToggleLeft="mm"
                custom:textToggleRight="in"
                app:checkedBackgroundColor="@color/orange"
                app:checkedTextColor="@android:color/white"
                app:uncheckedBackgroundColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_ad_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        custom:layout_constraintBottom_toBottomOf="parent" />
</RelativeLayout>