<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper5"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:title="@string/notification"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="14dip"
                android:paddingBottom="14dip">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="1.0"
                    android:text="@string/weather_information"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="14dip"
                android:paddingBottom="14dip">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="1.0"
                    android:text="@string/prepare_for_your_day"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />

            <LinearLayout
                android:id="@+id/select_time_notification"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="14dip"
                android:paddingBottom="14dip"
                android:onClick="onClick"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:id="@+id/time_noti">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_a_daily_notification_time"
                        android:textColor="@android:color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_you_prepare_more_actively"
                        android:textColor="@color/white70"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/time_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="8:00 AM"
                    android:textColor="@color/colorAccent"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />

            <LinearLayout
                android:id="@+id/select_time_repeat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:paddingTop="14dip"
                android:paddingBottom="14dip"
                android:onClick="onClick"
                android:clickable="true">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_notify_again"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/time_repeat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Cứ sau 1 ngày"
                    android:textColor="@color/white70"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="14dip"
                android:paddingBottom="14dip">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="1.0"
                    android:text="@string/vibrate_when_prompted"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="14dip"
                android:paddingBottom="14dip">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dip"
                    android:layout_marginRight="6dip"
                    android:layout_weight="1.0"
                    android:text="@string/sound_notification"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#76ffffff" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_ad_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>