<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper5"
    android:clickable="true"
    android:focusable="true"
    >

    <!--<ImageView-->
        <!--android:id="@+id/iv_wallpaper"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawable/wallpaper4" />-->


    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/edit_location"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/ll_add_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <ImageView
            android:layout_width="@dimen/activity_vertical_margin"
            android:layout_height="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_add_black_24dp" />

        <TextView
            android:id="@+id/text_add_location"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:maxLines="1"
            android:onClick="onClick"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/add_location"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_current_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_add_location"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="@dimen/activity_vertical_margin"
            android:layout_height="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_home_black_24dp" />

        <TextView
            android:id="@+id/text_cur_location"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:maxLines="1"
            android:onClick="onClick"
            android:clickable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/auto_detect_location"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/btn_more"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="3dip"
            android:src="@drawable/ic_more_black_24dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_location"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_current_location" />



</RelativeLayout>