<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://sche'mas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:id="@+id/dialog_wallpaper_hourly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_260sdp"

        android:scaleType="centerCrop">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_260sdp"
            android:id="@+id/background_dialog"
            android:scaleType="centerCrop"
            android:src="@drawable/wallpaper5"/>


        <RelativeLayout
            android:id="@+id/layout_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iconWeatherHour"
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp" />

            <TextView
                android:id="@+id/textTimeHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="end"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                >

                <TextView
                    android:id="@+id/textTempHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_20ssp" />


            </LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_190sdp"
            android:layout_below="@id/layout_header"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp">



                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailItem.Text"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/text_humidity_dialog"
                        style="@style/DetailItem.TextValue" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailItem.Text"
                        android:text="@string/wind" />

                    <TextView
                        android:id="@+id/text_wind_dialog"
                        style="@style/DetailItem.TextValue" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailItem.Text"
                        android:text="@string/cloud_cover" />

                    <TextView
                        android:id="@+id/text_weatherHour"
                        style="@style/DetailItem.TextValue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/DetailItem.Text"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/text_pressure_dialog"
                        style="@style/DetailItem.TextValue" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>